Added lots of shit, including progress bars and loading spinners
