# api/swagger/swagger.yaml
@@ -20,6 +20,14 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    defaultEntity:
+      type: object
+      properties:
+        _id:
+          type: string
+          readOnly: true
+        deleted:
+          type: boolean
     about:
       type: object
       description: About this API response object
@@ -76,6 +84,33 @@ components:
         password:
           description: Password of the player
           type: string
+    domain:
+      type: object
+      description: Domain response object
+      properties:
+        name:
+          description: Name of the domain
+          type: string
+    subdomain:
+      allOf:
+        - $ref: '#/components/schemas/defaultEntity'
+        - type: object
+          description: Domain response object
+          properties:
+            domain:
+              description: Domain ID
+              type: string
+            name:
+              description: Name of the subdomain
+              type: string
+            ipAddress:
+              description: IP Address for the
+              type: string
+            vulnerabilities:
+              description: Vulnerability IDs for this subdomain
+              type: array
+              items:
+                type: string
 
 paths:
   /:
@@ -277,6 +312,21 @@ paths:
           description: Bad Request
         403:
           description: Forbidden
+    delete:
+      security:
+        - jwt: []
+      summary: Delete Player details
+      description: This route handles delete players requests.
+      operationId: playerDelete
+      tags:
+        - Players
+      responses:
+        204:
+          description: No Content
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
   
   /vulnerabilities:
     x-hapi-handler: vulnerabilities
@@ -447,6 +497,305 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/vulnerability'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+
+  /domains:
+    x-hapi-handler: domains
+    get:
+      parameters:
+        - name: page
+          description: Current page
+          in: query
+          schema:
+            default: 1
+            type: integer
+        - name: size
+          description: Size of page
+          in: query
+          schema:
+            default: 10
+            type: integer
+        - name: search
+          description: Search string
+          in: query
+          schema:
+            type: string
+      security:
+        - jwt: []
+      summary: Get Domains
+      operationId: domainsGetAll
+      description: This route handles get domains requests.
+      tags:
+        - Domains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  totalRecords:
+                    type: integer
+                  records:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/domain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+    post:
+      security:
+        - jwt: []
+      summary: Create Domain
+      operationId: domainCreate
+      description: This route handles create domain requests.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/domain'
+      tags:
+        - Domains
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/domain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+
+  /domains/{id}:
+    x-hapi-handler: domains
+    parameters:
+      - name: id
+        in: path
+        description: id to get domains for
+        required: true
+        style: simple
+        schema:
+          type: string
+    get:
+      security:
+        - jwt: []
+      summary: Get Domain details
+      description: This route handles get domains requests.
+      operationId: domainDetails
+      tags:
+        - Domains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/domain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+    put:
+      security:
+        - jwt: []
+      summary: Update Domain
+      operationId: domainUpdate
+      description: This route handles update domain requests.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/domain'
+      tags:
+        - Domains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/domain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+
+  /subdomains:
+    x-hapi-handler: subdomains
+    get:
+      parameters:
+        - name: page
+          description: Current page
+          in: query
+          schema:
+            default: 1
+            type: integer
+        - name: size
+          description: Size of page
+          in: query
+          schema:
+            default: 10
+            type: integer
+        - name: search
+          description: Search string
+          in: query
+          schema:
+            type: string
+      security:
+        - jwt: []
+      summary: Get Subdomains
+      operationId: subdomainsGetAll
+      description: This route handles get subdomains requests.
+      tags:
+        - Subdomains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  totalRecords:
+                    type: integer
+                  records:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/subdomain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+    post:
+      security:
+        - jwt: []
+      summary: Create Subdomain
+      operationId: subdomainCreate
+      description: This route handles create subdomain requests.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/subdomain'
+      tags:
+        - Subdomains
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/subdomain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+
+  /subdomains/{id}:
+    x-hapi-handler: subdomains
+    parameters:
+      - name: id
+        in: path
+        description: id to get subdomains for
+        required: true
+        style: simple
+        schema:
+          type: string
+    get:
+      security:
+        - jwt: []
+      summary: Get Subdomain details
+      description: This route handles get subdomains requests.
+      operationId: subdomainsDetails
+      tags:
+        - Subdomains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/subdomain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+    put:
+      security:
+        - jwt: []
+      summary: Update Subdomain
+      operationId: subdomainsUpdate
+      description: This route handles update subdomains requests.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/subdomain'
+      tags:
+        - Subdomains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/subdomain'
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+
+  /subdomains/ipAddress/{ipAddress}:
+    x-hapi-handler: subdomains
+    parameters:
+      - name: ipAddress
+        in: path
+        description: ipAddress to get subdomain for
+        required: true
+        schema:
+          type: string
+    get:
+      parameters:
+        - name: page
+          description: Current page
+          in: query
+          schema:
+            default: 1
+            type: integer
+        - name: size
+          description: Size of page
+          in: query
+          schema:
+            default: 10
+            type: integer
+        - name: search
+          description: Search string
+          in: query
+          schema:
+            type: string
+      security:
+        - jwt: []
+      summary: Get Subdomains
+      description: This route handles get subdomains requests.
+      operationId: subdomainsGetByIpAddress
+      tags:
+        - Subdomains
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/subdomain'
         400:
           description: Bad Request
         403:
